feat: get all customers
